// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not mind extra whitespace in HOSTS variable declaration 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

- name: run insights to obtain latest diagnosis info
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  vars:
    insights_signature_exclude: "/hosts,/vars/insights_signature"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTV05DUVVGQ1EwRkJSMEpSU201NE0xWTVRVUZ2U2tWTmRuYzFPRVFyYWpWd1Ru
      cHFZMUF2TVVoUGFEZDBWbVV6TkV0cFUyZ3dRMjlFUm5wcWRGUUtiRUYzYkRaaGVqaERWak12YjJR
      MVkwdGhjR3RPVlZVNVNsSkNURk5yUVdFM0wyTllia0UwUjJOM2JtZDNaWGcxYUhGT2N6RXJhVkJz
      WTNCQmVIbHRlZ3BFWjJ4aGRFbEtkaTlyUlhkUU1YSlBUVmhNTUVScmIzY3lhVFYyVTFwUmEwVXph
      MjgxTTNaYVVXczNXRE40Y1hWWlJVSTJjVFZwZFc5eE1tTkNiSFJWQ2pacVlYSmFRbFF5Y25SalRU
      UXlSa2hqYkUxcE0zaEJabmxIV1dGM1ZHNTBiekpTYjFBclFrZFhaWFozVkRSbFVIQk5ObEkzZDFJ
      MFpHUktUbWxRUzAwS1RuVm5jMWxLWm1RM1dqRlJhazVhWjAwMlFtOHpUa3d5VnpONlZtdHhTVlU1
      TTFGMFMySkhVWFJTVVZadEwySm5NRFU0U21ZdlJqQlBlVGd2ZEVacGRBb3lhSEo2U1hseldERjVN
      SFZCUnpSTVZWcEJaRmhUU1dFdllXNWFXSHB2Ym5keVNuQkdja2x3ZFhSQ1lUWXlaMlF5VTJ4TFNE
      aFVNM0pKZEZaWWRGSnlDa2hHVEhGalR6ZHpUbmN2T0dKWlVtTlpiWFYyWlZaVVdYbFRRVk5UVkZK
      S01WcHpjbWhvVlZsMVRGUjRaMlJhTnpkSWFFaFpVR0pxT1d4RVFtdG1RbFVLY25OdmIzVnhabTlN
      WjJ0Qk1sQlVjRkJ6TWxobWRERkxRbk5LY0dwd1UxZFlTRlJPYmtFNGFFWnNUM3BGU1ZSTVpuSkhO
      Rkp5YzJkeE5EWk1iVGxOVmdvdmJtWklRVEpHYnpSUFEzUmlja1UwU0VWVVNGZE9kbFpJY0dGd01s
      RnRkekZ5VFRWUGIyeEViV2xSY0ZVMVFpdHBiVEpwYm5RMmRFZEVZMFY1TVU5RUNuWkVVblJLWjBa
      RmJtNUhabVpzT1hKT2RtOVRUVWhXYVU5a2JtZDBRMlo2VURsWVdXTkRSMWhHVWt0c09IaEZTbEJ5
      TVVSQk1tdEVjbkZMYlVaMFUwb0tVWGhwYmtOc2RscEpZMlZHUXpsSVdESTFRakJvYTJ4aE1HMTBX
      WGM1WmxaemR6ZE5VVVZ4VGpjMmNUSkZWMUV2VVc4M05WaFZVbTlKTTBGWlRUSjBXUXBaVmtwNFpY
      QlFRVTVyV0c5WVFrMTRXa1E1WWdvOVJXMW9Od290TFMwdExVVk9SQ0JRUjFBZ1UwbEhUa0ZVVlZK
      RkxTMHRMUzBL
  become: true
  tasks:
    - name: obtain diagnosis info
      command: "insights-client --diagnosis"
      register: insights_result
      changed_when: false
      check_mode: false
    - name: register insights report as fact for use by other plays
      set_fact: insights_report={{ insights_result.stdout }}

# Unexpected bonding behavior with incorrect syntax in bond configuration files
# Identifier: (advisor:bond_config_issue|EXTRA_WHITESPACE,fix)
# Version: a0e934f07d8167073546cbc5108c4345f92559a5
- name: Correct Bonding Config Items
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  vars:
    pydata: "{{ insights_report.details['bond_config_issue|BOND_CONFIG_ISSUE'] }}"
  tasks:

    - when: 
        - insights_report.details['bond_config_issue|BOND_CONFIG_ISSUE'] is defined
        - item.value == 2
      name: Add quotes around bonding options
      lineinfile:
        dest: "/etc/sysconfig/network-scripts/ifcfg-{{ item.key }}"
        regexp: '(^\\s*BONDING_OPTS=)(.*)'
        backrefs: yes
        line: '\\1"\\2"'
      with_dict: "{{ pydata.interface_issue_dict }}"

    - when:
        - insights_report.details['bond_config_issue|BOND_CONFIG_ISSUE'] is defined
        - item.value == 1
      name: lowercase yes in Slave option
      lineinfile:
        dest: "/etc/sysconfig/network-scripts/ifcfg-{{ item.key }}"
        regexp: '(^\\s*SLAVE=)("*YES"*)'
        backrefs: yes
        line: '\\1yes'
      with_dict: "{{ pydata.interface_issue_dict }}"


- name: run insights
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;

exports[`generates a rule-based playbook 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

- name: run insights to obtain latest diagnosis info
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  vars:
    insights_signature_exclude: "/hosts,/vars/insights_signature"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTV05DUVVGQ1EwRkJSMEpSU201NE0xWTVRVUZ2U2tWTmRuYzFPRVFyYWpWd1Ru
      cHFZMUF2TVVoUGFEZDBWbVV6TkV0cFUyZ3dRMjlFUm5wcWRGUUtiRUYzYkRaaGVqaERWak12YjJR
      MVkwdGhjR3RPVlZVNVNsSkNURk5yUVdFM0wyTllia0UwUjJOM2JtZDNaWGcxYUhGT2N6RXJhVkJz
      WTNCQmVIbHRlZ3BFWjJ4aGRFbEtkaTlyUlhkUU1YSlBUVmhNTUVScmIzY3lhVFYyVTFwUmEwVXph
      MjgxTTNaYVVXczNXRE40Y1hWWlJVSTJjVFZwZFc5eE1tTkNiSFJWQ2pacVlYSmFRbFF5Y25SalRU
      UXlSa2hqYkUxcE0zaEJabmxIV1dGM1ZHNTBiekpTYjFBclFrZFhaWFozVkRSbFVIQk5ObEkzZDFJ
      MFpHUktUbWxRUzAwS1RuVm5jMWxLWm1RM1dqRlJhazVhWjAwMlFtOHpUa3d5VnpONlZtdHhTVlU1
      TTFGMFMySkhVWFJTVVZadEwySm5NRFU0U21ZdlJqQlBlVGd2ZEVacGRBb3lhSEo2U1hseldERjVN
      SFZCUnpSTVZWcEJaRmhUU1dFdllXNWFXSHB2Ym5keVNuQkdja2x3ZFhSQ1lUWXlaMlF5VTJ4TFNE
      aFVNM0pKZEZaWWRGSnlDa2hHVEhGalR6ZHpUbmN2T0dKWlVtTlpiWFYyWlZaVVdYbFRRVk5UVkZK
      S01WcHpjbWhvVlZsMVRGUjRaMlJhTnpkSWFFaFpVR0pxT1d4RVFtdG1RbFVLY25OdmIzVnhabTlN
      WjJ0Qk1sQlVjRkJ6TWxobWRERkxRbk5LY0dwd1UxZFlTRlJPYmtFNGFFWnNUM3BGU1ZSTVpuSkhO
      Rkp5YzJkeE5EWk1iVGxOVmdvdmJtWklRVEpHYnpSUFEzUmlja1UwU0VWVVNGZE9kbFpJY0dGd01s
      RnRkekZ5VFRWUGIyeEViV2xSY0ZVMVFpdHBiVEpwYm5RMmRFZEVZMFY1TVU5RUNuWkVVblJLWjBa
      RmJtNUhabVpzT1hKT2RtOVRUVWhXYVU5a2JtZDBRMlo2VURsWVdXTkRSMWhHVWt0c09IaEZTbEJ5
      TVVSQk1tdEVjbkZMYlVaMFUwb0tVWGhwYmtOc2RscEpZMlZHUXpsSVdESTFRakJvYTJ4aE1HMTBX
      WGM1WmxaemR6ZE5VVVZ4VGpjMmNUSkZWMUV2VVc4M05WaFZVbTlKTTBGWlRUSjBXUXBaVmtwNFpY
      QlFRVTVyV0c5WVFrMTRXa1E1WWdvOVJXMW9Od290TFMwdExVVk9SQ0JRUjFBZ1UwbEhUa0ZVVlZK
      RkxTMHRMUzBL
  become: true
  tasks:
    - name: obtain diagnosis info
      command: "insights-client --diagnosis"
      register: insights_result
      changed_when: false
      check_mode: false
    - name: register insights report as fact for use by other plays
      set_fact: insights_report={{ insights_result.stdout }}

# Bonding will not fail over to the backup link when bonding options are partially read
# Identifier: (advisor:network_bond_opts_config_issue|NETWORK_BONDING_OPTS_DOUBLE_QUOTES_ISSUE,fix)
# Version: a0e934f07d8167073546cbc5108c4345f92559a5
- name: Correct Bonding Config Items
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  vars:
    pydata: "{{ insights_report.details['network_bond_opts_config_issue|NETWORK_BONDING_OPTS_DOUBLE_QUOTES_ISSUE'] }}"

  tasks:
    - when:
       - pydata.bond_config is defined
      block:
        - name: Add quotes around bonding options
          lineinfile:
            dest: "/etc/sysconfig/network-scripts/ifcfg-{{ item.key }}"
            regexp: '(^\\s*BONDING_OPTS=)(.*)'
            backrefs: yes
            line: '\\1"\\2"'
          with_dict: "{{ pydata.bond_config }}"

        - name: Restart Network Interfaces
          shell: ifdown {{item.key}}  && ifup {{item.key}}
          with_dict: "{{ pydata.bond_config }}"


- name: run insights
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;

exports[`puts quotes around hosts list 1`] = `
"---
# Red Hat Insights has recommended one or more actions for you, a system administrator, to review and if you
# deem appropriate, deploy on your systems running Red Hat software. Based on the analysis, we have automatically
# generated an Ansible Playbook for you. Please review and test the recommended actions and the Playbook as
# they may contain configuration changes, updates, reboots and/or other changes to your systems. Red Hat is not
# responsible for any adverse outcomes related to these recommendations or Playbooks.

- name: run insights to obtain latest diagnosis info
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  vars:
    insights_signature_exclude: "/hosts,/vars/insights_signature"
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTV05DUVVGQ1EwRkJSMEpSU201NE0xWTVRVUZ2U2tWTmRuYzFPRVFyYWpWd1Ru
      cHFZMUF2TVVoUGFEZDBWbVV6TkV0cFUyZ3dRMjlFUm5wcWRGUUtiRUYzYkRaaGVqaERWak12YjJR
      MVkwdGhjR3RPVlZVNVNsSkNURk5yUVdFM0wyTllia0UwUjJOM2JtZDNaWGcxYUhGT2N6RXJhVkJz
      WTNCQmVIbHRlZ3BFWjJ4aGRFbEtkaTlyUlhkUU1YSlBUVmhNTUVScmIzY3lhVFYyVTFwUmEwVXph
      MjgxTTNaYVVXczNXRE40Y1hWWlJVSTJjVFZwZFc5eE1tTkNiSFJWQ2pacVlYSmFRbFF5Y25SalRU
      UXlSa2hqYkUxcE0zaEJabmxIV1dGM1ZHNTBiekpTYjFBclFrZFhaWFozVkRSbFVIQk5ObEkzZDFJ
      MFpHUktUbWxRUzAwS1RuVm5jMWxLWm1RM1dqRlJhazVhWjAwMlFtOHpUa3d5VnpONlZtdHhTVlU1
      TTFGMFMySkhVWFJTVVZadEwySm5NRFU0U21ZdlJqQlBlVGd2ZEVacGRBb3lhSEo2U1hseldERjVN
      SFZCUnpSTVZWcEJaRmhUU1dFdllXNWFXSHB2Ym5keVNuQkdja2x3ZFhSQ1lUWXlaMlF5VTJ4TFNE
      aFVNM0pKZEZaWWRGSnlDa2hHVEhGalR6ZHpUbmN2T0dKWlVtTlpiWFYyWlZaVVdYbFRRVk5UVkZK
      S01WcHpjbWhvVlZsMVRGUjRaMlJhTnpkSWFFaFpVR0pxT1d4RVFtdG1RbFVLY25OdmIzVnhabTlN
      WjJ0Qk1sQlVjRkJ6TWxobWRERkxRbk5LY0dwd1UxZFlTRlJPYmtFNGFFWnNUM3BGU1ZSTVpuSkhO
      Rkp5YzJkeE5EWk1iVGxOVmdvdmJtWklRVEpHYnpSUFEzUmlja1UwU0VWVVNGZE9kbFpJY0dGd01s
      RnRkekZ5VFRWUGIyeEViV2xSY0ZVMVFpdHBiVEpwYm5RMmRFZEVZMFY1TVU5RUNuWkVVblJLWjBa
      RmJtNUhabVpzT1hKT2RtOVRUVWhXYVU5a2JtZDBRMlo2VURsWVdXTkRSMWhHVWt0c09IaEZTbEJ5
      TVVSQk1tdEVjbkZMYlVaMFUwb0tVWGhwYmtOc2RscEpZMlZHUXpsSVdESTFRakJvYTJ4aE1HMTBX
      WGM1WmxaemR6ZE5VVVZ4VGpjMmNUSkZWMUV2VVc4M05WaFZVbTlKTTBGWlRUSjBXUXBaVmtwNFpY
      QlFRVTVyV0c5WVFrMTRXa1E1WWdvOVJXMW9Od290TFMwdExVVk9SQ0JRUjFBZ1UwbEhUa0ZVVlZK
      RkxTMHRMUzBL
  become: true
  tasks:
    - name: obtain diagnosis info
      command: "insights-client --diagnosis"
      register: insights_result
      changed_when: false
      check_mode: false
    - name: register insights report as fact for use by other plays
      set_fact: insights_report={{ insights_result.stdout }}

# Unexpected bonding behavior with incorrect syntax in bond configuration files
# Identifier: (advisor:bond_config_issue|NO_QUOTES,fix)
# Version: a0e934f07d8167073546cbc5108c4345f92559a5
- name: Correct Bonding Config Items
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  vars:
    pydata: "{{ insights_report.details['bond_config_issue|BOND_CONFIG_ISSUE'] }}"
  tasks:

    - when: 
        - insights_report.details['bond_config_issue|BOND_CONFIG_ISSUE'] is defined
        - item.value == 2
      name: Add quotes around bonding options
      lineinfile:
        dest: "/etc/sysconfig/network-scripts/ifcfg-{{ item.key }}"
        regexp: '(^\\s*BONDING_OPTS=)(.*)'
        backrefs: yes
        line: '\\1"\\2"'
      with_dict: "{{ pydata.interface_issue_dict }}"

    - when:
        - insights_report.details['bond_config_issue|BOND_CONFIG_ISSUE'] is defined
        - item.value == 1
      name: lowercase yes in Slave option
      lineinfile:
        dest: "/etc/sysconfig/network-scripts/ifcfg-{{ item.key }}"
        regexp: '(^\\s*SLAVE=)("*YES"*)'
        backrefs: yes
        line: '\\1yes'
      with_dict: "{{ pydata.interface_issue_dict }}"


- name: run insights
  hosts: "68799a02-8be9-11e8-9eb6-529269fb1459.example.com"
  become: true
  gather_facts: false
  vars:
    insights_signature_exclude: /hosts,/vars/insights_signature
    insights_signature: !!binary |
      TFMwdExTMUNSVWRKVGlCUVIxQWdVMGxIVGtGVVZWSkZMUzB0TFMwS1ZtVnljMmx2YmpvZ1IyNTFV
      RWNnZGpFS0NtbFJTVlpCZDFWQldVaHBRaXR6ZG5jMU9FUXJhalZ3VGtGUmFXdDRaeTh2WmtaRFoz
      QXlTblIxVEd0UU5qQnNTa3BZYm1GU1JGTjVjVVYwU0ZSNlRGY0tOVlZSVlc5MWEyUmpVRFJVUlZn
      d01EaDFhRkJHUzFaSmVrdFVTR2RsYTFOaU1UUXlkMjlQYm5sR2VUUnpRbEJrZEZoaGREVlliWEp0
      VGxsR1EwaEVWZ28xYVhSdlNrcDBPVzg1UWtkQlJVaDVZMFJ3SzBoNVNqWXphM0paZVRGUk1rOXVU
      azF3VjJaSmNtYzJUakJXVTJoa1JtVk1lR0ppTjBaMlpFaEpjbFo2Q2pJNGFrdHhOemx1Tm13eUx6
      aDZZVkJSTDFkWVZIWkNaMDVhUkVWTFJ6TmhSSFl3WVRkbWIyUnlPRWhEZGxseE5tNUhNRkZOY1RO
      U1ZFOXBkbFZtTTFnS1JuQnlhVTh2TDNKSlRDOVlSelE1TTA1NGFWSjBRakVyZEhSUk0wZHNhM1ZE
      ZFVwck1EQkdaREp0ZDNZNFprRnZaR2xUUW5aelQydEpZekZyV25adFN3cEJjR3BEY1ZKMWVHaExU
      MDgzYWxZM1FYSnRTV0p6TkhobVJrUkJVMkZaV2t4R01VMHZhME42ZWs1d1MwTjFhbE5hVUUxRlVt
      WlhhV2RHVGpGMWRqRjNDalpQSzB0b1pTdFJVRU5hUm5CV1kwVndSbTFSTVdwcWFrOVFPV2haSzNW
      alZWSnhSVEkyTlhGTWRuWnFSWE4wUW5WQk4xQkZNRVZ3UkRsaU5VaFZSM1lLTkZKemJXc3pNbFpC
      Vnl0WE5IWk1VRWQwZG1sQ00wSXpUbE0wZUhCdVIzSmlObGs1Y1cwNFZuVTJSRUZIV2xOYWRsbFlk
      bWQwTm1WR2N6RTVTVFZZUWdvMGVtcFVSRUlyTW1sT2NrcE9jM2d5YURoU1VGVnJMMmhZUzFKMGEy
      WnZZMlpKZVRkcGNWY3hiMGRsTlZSMmFqTTFSbXRqUld0YU9VRnpSMjl6WXpWMENuUlZkVlZJWWpS
      ME5EVTFSSE5EWlZWc1ZEZFNOakJDTTB4d1Z6TmlTRTF0YzFCMEx6RktNRFEwYm1KS2RFTkhUM1Jy
      UVVWWVRsVTJlbGxUTDNBMFFqSUtaSFYxY2tZdlNHUnFWWFJNVDNSdlNFTnlZVWd2WkZwaFRVNTZk
      MVZpZUc1VFZXUkdZU3R6TTBaNFJHczFVVkU0VVRaMVVucFpRbWw0WkcxeWREZGpUQXBKYTA1NlEy
      aHBRMDlrY3owS1BVMVZOMk1LTFMwdExTMUZUa1FnVUVkUUlGTkpSMDVCVkZWU1JTMHRMUzB0Q2c9
      PQ==
  tasks:
    - name: run insights
      command: insights-client
      changed_when: false"
`;
